--- a/README
+++ b/README
@@ -1,15 +1,10 @@
-To install puppet
-
-put the following in /etc/yum.repos.d/puppet.repo
-[puppetlabs]
-name=Puppet Labs Packages
-baseurl=http://yum.puppetlabs.com/fedora/f15/products/x86_64/
-enabled=0
-gpgcheck=0
-
-then run
+To install puppet from scratch:
+sudo yum -y install git
+git clone http://bornready:Test12345@github.com/bornready/orville
+sudo cp orville/yum.repos.d/puppet.repo /etc/yum.repos.d/
 sudo yum -y --enablerepo=puppetlabs install puppet
 
 Instructions for adding a puppet rvm module
 https://github.com/blt04/puppet-rvm
+
 
