Removed ruby as no longer working

--- a/TODO
+++ b/TODO
@@ -44,3 +44,7 @@ Future improvements
 - Lightweight X-window for the slaves OR xvfb (for Amazon cloud) 
 
 
+As at 21 Feb
+Need to install user apache
+Sor
+
